syntax = "proto3";

package echo3;
option go_package = "github.com/juliaogris/guppy/pkg/echo3";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";

// Echo service.
service Echo {
  // Hello greets.
  rpc Hello (HelloRequest) returns (HelloResponse) {
    option (google.api.http) = { post:"/api/echo/hello" body:"*" };
  };
  // HeeloStream greets repeatedly.
  rpc HelloStream (HelloRequest) returns (stream HelloResponse) {
    option (google.api.http) = { post:"/api/echo/stream" body:"*" };
  };
}

message HelloRequest {
  string message = 1;
  Details more_details = 2;
}

message HelloResponse {
  string robot_response = 1;
}

message Details {
  map<string, int64> label_count = 1;
  ColorType color_type = 2;
  optional google.protobuf.Any any = 3;
  repeated Notification notifications = 4;
  int32 a_int32 = 5;
  uint32 a_uint32 = 6;
  int64 a_int64 = 7;
  uint64 a_uint64 = 8;
  bool a_bool = 9;
  sint32 a_sint32 = 10;
  sint64 a_sint64 = 11;
  string a_string = 12;
  bytes a_bytes = 13;
  fixed32 a_fixed32 = 14;
  sfixed32 a_sfixed32 = 15;
  fixed64 a_fixed64 = 16;
  sfixed64 a_sfixed64 = 17;
}

enum ColorType {
  RED = 0;
  BLUE = 1;
  GREEN = 2;
}

message Notification {
  int32 id = 1;
  oneof instrument {
    PrivateNotification private = 2;
    PublicNotification public = 3;
  }
}

message PrivateNotification {
  string secret_content = 1;
}

message PublicNotification {
  string content = 1;
}

